# VRP-tabu

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  VRP  doc.txt  expected.py  input.expected  input.json  main.cpp  o.json  output.json
.github/: dependabot.yml
.github/workflows/: branch-cleanup.yml  codeql-analysis.yml  security-scan.yml
actor/: Controller.cpp  Controller.h  Customer.cpp  Customer.h  Depot.cpp  Depot.h  OptimalMove.cpp  OptimalMove.h  Route.cpp  Route.h  TabuList.cpp  TabuList.h  TabuSearch.cpp  TabuSearch.h  Vehicle.cpp  Vehicle.h
doc/: benchmark-results.md  benchmark-summary.md
instances/VRP-Set-E/: E-n101-k14.json  E-n101-k14.opt  E-n101-k8.json  E-n101-k8.opt  E-n51-k5.json  E-n51-k5.opt.json  E-n51-k5.opt0.json  E-n76-k10.json  E-n76-k14.json  E-n76-k7.json  E-n76-k8.json
lib/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  OptimalMove.cpp  OptimalMove.h  Search.cpp  Search.h  ThreadPool.h  Utils.cpp  Utils.h  VRP.cpp  VRP.h  Vertex.cpp  Vertex.h
vrp-init/: E-n101-k14.json  E-n101-k8.json  E-n51-k5.json  E-n76-k10.json  E-n76-k14.json  E-n76-k7.json  E-n76-k8.json  coords.css  coords.js  fabric.min.js  index.html  min.fabric.js
